--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   composer-install:
-    name: Run tests
+    name: Composer install
     runs-on: ubuntu-latest
     strategy:
       matrix:
