--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,3 +72,6 @@ jobs:
         run: composer site-install
 
       - run: curl chromedriver:4444/wd/hub/status
+
+      - name: Run PHPUnit
+        run: composer phpunit
