--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
         "drush/drush": "^13.6"
     },
     "scripts": {
+        "phpunit": [
+            "vendor/bin/phpunit"
+        ],
         "site-install": [
             "drush site:install --yes --existing-config"
         ]
