--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,9 @@ jobs:
   phpunit:
     name: PHPUnit
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: /var/www/html
     container:
       image: wodby/php:8.3
     services:
