--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,9 +69,7 @@ jobs:
       - name: Install Drupal
         run: composer site-install
 
-      - run: curl chromedriver:4444/wd/hub/status
-
       - name: Run PHPUnit
         run: composer phpunit
         env:
-          DTT_MINK_DRIVER_ARGS: "[\"chrome\", {\"browserName\":\"chrome\",\"goog:chromeOptions\":{\"w3c\":false,\"args\":[\"--headless\", \"--disable-gpu\", \"--no-sandbox\", \"--disable-dev-shm-usage\"]}}, \"http://host.docker.internal:8643/wd/hub\"]"
+          DTT_MINK_DRIVER_ARGS: "[\"chrome\", {\"browserName\":\"chrome\",\"goog:chromeOptions\":{\"w3c\":false,\"args\":[\"--headless\", \"--disable-gpu\", \"--no-sandbox\", \"--disable-dev-shm-usage\"]}}, \"http://chromedriver:4444/wd/hub\"]"
