--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: wodby/drupal-php:8.3
-      options: --user wodby
+      options: --user 1001
     services:
       db:
         image: mysql:8.0
@@ -64,6 +64,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Show user info (debug)
+        run: id && whoami
 
       - name: Install dependencies
         run: composer --verbose install
