--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,10 @@
 image: wodby/php:8.3
 
+composer-validate:
+  script: 
+    - composer install
+    - composer validate --no-check-version --no-check-publish
+
 composer-install:
   script:
     - composer install
