--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         },
         "sort-packages": true
     },
-    "script": {
+    "scripts": {
         "update": "echo derp"
     },
     "extra": {
