--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,6 +77,7 @@ jobs:
         php-version:
           - "8.3"
     steps:
+      - run: whoami && id
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install dependencies
