--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
           php-version: ${{ matrix.php-version }}
 
       - name: Composer validate
-        run: composer validate --no-check-version --no-check-publish
+        run: composer ci:validate
 
   composer-install:
     name: Composer install
