--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "drupal/core-recommended": "^11.1"
     },
     "scripts": {
-        "ci:validate": "@composer validate --no-check-version --no-check-publish"
+        "ci:validate": "@composer validate --no-check-version --no-check-publish --strict"
     },
     "conflict": {
         "drupal/drupal": "*"
