--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         "drupal/core-project-message": "^11.1",
         "drupal/core-recommended": "^11.1"
     },
+    "scripts": {
+        "ci:validate": "@composer validate --no-check-version --no-check-publish --strict"
+    },
     "conflict": {
         "drupal/drupal": "*"
     },
